workloads/openclaw/openclaw-app/openclaw-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ssh-over-tls-ingress
  namespace: openclaw
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`openclaw.bapttf.com`)
      services:
        - name: openclaw-ssh
          port: 22
  tls:
    secretName: tls-certificate
